支付模块+消费模块。

--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -1,6 +1,17 @@
 #端口
+
+
 server:
   port: 8001
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    serviceUrl:
+      defaultZone: http://localhost:10001/eureka
+security:
+  basic:
+    enabled: false
 
 spring:
   application:
@@ -8,10 +19,10 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/my?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 1234
+    password: root1234
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.lun.springcloud.entities    # 所有Entity别名类所在包
+  type-aliases-package: com.aiguigu.springcloud.entity    # 所有Entity别名类所在包
