--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -11,6 +11,9 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+  instance:
+    instance-id: payment8001 #服务名称修改（也就是将IP地址，换成可读性高的名字）
+    prefer-ip-address: true #添加此处
 security:
   basic:
     enabled: false
