--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -8,8 +8,8 @@ eureka:
     register-with-eureka: false #false表示不向注册中心注册自己。
     fetch-registry: false #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     service-url:
-      defaultZone: http://eureka7002.com:7002/eureka/ #集群指向其它eureka
-      #defaultZone: http://eureka7001.com:7001/eureka/ #单机就是指向自己
+      #defaultZone: http://eureka7002.com:7002/eureka/ #集群指向其它eureka
+      defaultZone: http://eureka7001.com:7001/eureka/ #单机就是指向自己
       #设置与Eureka server交互的地址查询服务和注册服务都需要依赖这个地址。
       #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
