--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -10,7 +10,8 @@ eureka:
     #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+      #defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+       defaultZone: http://eureka7001.com:7001/eureka
   instance:
     instance-id: payment8002 #服务名称修改（也就是将IP地址，换成可读性高的名字）
     prefer-ip-address: true #添加此处
